// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<svg
  class="Spinner Spinner--default"
  viewBox="0 0 60 51"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="circle1--translate"
    transform="translate(10,33.528168)"
  >
    <g
      class="circle1--scale"
    >
      <circle
        id="circle1"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle2--translate"
    transform="translate(30,33.528168)"
  >
    <g
      class="circle2--scale"
    >
      <circle
        id="circle2"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle3--translate"
    transform="translate(50,33.528168)"
  >
    <g
      class="circle3--scale"
    >
      <circle
        id="circle3"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
</svg>
`;

exports[`renders the component with a custom size 1`] = `
<svg
  class="Spinner Spinner--default"
  data-testid="spinner"
  style="height: 42px; width: 42px;"
  viewBox="0 0 60 51"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="circle1--translate"
    transform="translate(10,33.528168)"
  >
    <g
      class="circle1--scale"
    >
      <circle
        id="circle1"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle2--translate"
    transform="translate(30,33.528168)"
  >
    <g
      class="circle2--scale"
    >
      <circle
        id="circle2"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle3--translate"
    transform="translate(50,33.528168)"
  >
    <g
      class="circle3--scale"
    >
      <circle
        id="circle3"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
</svg>
`;

exports[`renders the component with an additional class name 1`] = `
<svg
  class="Spinner my-extra-class Spinner--default"
  viewBox="0 0 60 51"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="circle1--translate"
    transform="translate(10,33.528168)"
  >
    <g
      class="circle1--scale"
    >
      <circle
        id="circle1"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle2--translate"
    transform="translate(30,33.528168)"
  >
    <g
      class="circle2--scale"
    >
      <circle
        id="circle2"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle3--translate"
    transform="translate(50,33.528168)"
  >
    <g
      class="circle3--scale"
    >
      <circle
        id="circle3"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
</svg>
`;

exports[`renders the component with the size "large" 1`] = `
<svg
  class="Spinner Spinner--large Spinner--default"
  viewBox="0 0 60 51"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="circle1--translate"
    transform="translate(10,33.528168)"
  >
    <g
      class="circle1--scale"
    >
      <circle
        id="circle1"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle2--translate"
    transform="translate(30,33.528168)"
  >
    <g
      class="circle2--scale"
    >
      <circle
        id="circle2"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle3--translate"
    transform="translate(50,33.528168)"
  >
    <g
      class="circle3--scale"
    >
      <circle
        id="circle3"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
</svg>
`;

exports[`renders the component with the size "small" 1`] = `
<svg
  class="Spinner Spinner--small Spinner--default"
  viewBox="0 0 60 51"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="circle1--translate"
    transform="translate(10,33.528168)"
  >
    <g
      class="circle1--scale"
    >
      <circle
        id="circle1"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle2--translate"
    transform="translate(30,33.528168)"
  >
    <g
      class="circle2--scale"
    >
      <circle
        id="circle2"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
  <g
    class="circle3--translate"
    transform="translate(50,33.528168)"
  >
    <g
      class="circle3--scale"
    >
      <circle
        id="circle3"
        r="6"
        transform="translate(0,10.471832)"
      />
    </g>
  </g>
</svg>
`;
